--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body {
   background-image: url(https://rawfury.com/wp-content/uploads/2020/10/TormentorxPunisher_Key_Art_NoLogo.png);
   background-repeat: no-repeat;
   background-size: cover;
+  margin: 0;
 }
 h1 {
   text-align: center;
@@ -26,21 +27,25 @@ h1 {
   color: #2cc12c;
   text-shadow: -1px 11px 0 #b70909, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
 }
-.arena {
+.container {
   border: 4px solid black;
   background-color: #808080f7;
-  height: 60vh;
-  width: 50%;
+  width: 66%;
   margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 0;
+}
+.arena {
+  height: 66vh;
+  z-index: 2;
 }
 .startScreenText {
   text-align: center;
 }
 .arena p {
-  text-shadow: -1px 1px 0 #b70909, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+  text-shadow: -1px 0px 0 #b70909, 0px -1px 0 black, -1px 0px 0 black, 0px 0px 0 black;
   font-size: 2rem;
 }
 .arena a {
@@ -49,11 +54,9 @@ h1 {
   color: #2cc12c;
   text-shadow: -1px 4px 0 #b70909, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
 }
-.playerBase {
-  background-color: black;
-  height: 3rem;
-  width: 4rem;
+.arenaTwo {
+  width: 66%;
+  height: 66vh;
+  margin: 0 auto;
 }
-.hidden {
-  display: none;
-}
+
