--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 /* Box Model Hack */
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 /* Clear fix hack */
 .clearfix:after {
@@ -16,11 +18,21 @@
 }
 body {
   font-family: 'Creepster','Rye', cursive;
-  background-image: url(https://rawfury.com/wp-content/uploads/2020/10/TormentorxPunisher_Key_Art_NoLogo.png);
-  background-repeat: no-repeat;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("https://rawfury.com/wp-content/uploads/2020/10/TormentorxPunisher_Key_Art_NoLogo.png");
   background-size: cover;
-  margin: 0;
+  z-index: -1;
 }
+.arena {
+  white-space: pre-wrap;
+  height: 88vh;
+  z-index: 2;
+}
+
 h1 {
   text-align: center;
   font-size: 4rem;
@@ -31,21 +43,15 @@ h1 {
   border: 4px solid black;
   background-color: #808080f7;
   width: 66%;
+  height: 90vh;
   margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   z-index: 0;
-}
-.arena {
-  height: 66vh;
-  z-index: 2;
 }
 .startScreenText {
   text-align: center;
 }
 .arena p {
-  text-shadow: -1px 0px 0 #b70909, 0px -1px 0 black, -1px 0px 0 black, 0px 0px 0 black;
+  text-shadow: 0px 4px 0 #b70909, 0px -1px 0 black, -1px 0px 0 black, 0px 0px 0 black;
   font-size: 2rem;
 }
 .arena a {
@@ -53,10 +59,10 @@ h1 {
   font-size: 3rem;
   color: #2cc12c;
   text-shadow: -1px 4px 0 #b70909, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
-}
-.arenaTwo {
-  width: 66%;
-  height: 66vh;
-  margin: 0 auto;
+  height: 88vh;
+  z-index: 2;
 }
 
+canvas {
+  background-color: #b7090940;
+}
