--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ h1 {
   border: 4px solid black;
   background-color: #808080f7;
   width: 55%;
-  height: 90vh;
+
   margin: 0 auto;
   z-index: 0;
 }
@@ -67,7 +67,7 @@ h1 {
 }
 .arena p {
   text-shadow: 0px 4px 0 #b70909, 0px -1px 0 black, -1px 0px 0 black, 0px 0px 0 black;
-  font-size: 3rem;
+  font-size: 2rem;
 }
 .arena a {
   text-decoration: none;
@@ -84,6 +84,15 @@ canvas {
   user-select: none;
   width: 100%;
   height: 100%;
+}
+
+audio {
+  height: 2rem;
+  width: 10rem;
+  position: absolute;
+  top: 1px;
+  right: 1px;
+  z-index: 1;
 }
 
 /* Media Queries */
