Added apple tag and downloaded the background and canvas grass texture

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("https://rawfury.com/wp-content/uploads/2020/10/TormentorxPunisher_Key_Art_NoLogo.png");
+  background-image: url("../images/lastStandHordeSeigeBackground.png");
   background-size: cover;
   background-attachment: fixed; /* Keep the background fixed */
   z-index: -1;
@@ -79,7 +79,7 @@ h1 {
 }
 
 canvas {
-  background-image: url(https://www.textures.com/system/gallery/photos/Nature/Grass/107918/Grass0213_1_350.jpg);
+  background-image: url('../images/grass.jpg');
   z-index: 0;
   user-select: none;
   width: 100%;
